--- a/offgridplanner/templates/pages/project_setup.html
+++ b/offgridplanner/templates/pages/project_setup.html
@@ -50,10 +50,10 @@
             {% endif %}
             {% endfor %}
             <label class="form-label">
-              Planning Steps
+              {% translate "Planning Steps" %}
               <span class="icon icon-question"
                     data-bs-toggle="tooltip"
-                    title="Offgridplanner was developed to guide users through the entire planning process of an off-grid system, from demand estimation and spatial grid optimization to design optimization and unit commitment of energy converters. However, individual planning steps can be skipped if needed; simply deselect the relevant options accordingly."></span>
+                    title="{% translate 'Offgridplanner was developed to guide users through the entire planning process of an off-grid system, from demand estimation and spatial grid optimization to design optimization and unit commitment of energy converters. However, individual planning steps can be skipped if needed; simply deselect the relevant options accordingly.' %}"></span>
             </label>
             <div class="form-control" style="background-color: var(--bcc)">
               {% for field in opts_form %}
