--- a/offgridplanner/templates/pages/demand_estimation.html
+++ b/offgridplanner/templates/pages/demand_estimation.html
@@ -31,9 +31,9 @@
                 <button class="accordion-button no-arrow"
                         type="button"
                         data-bs-toggle="collapse">
-                  <span style="flex-grow: 1;">Set Consumer Properties</span>
+                  <span style="flex-grow: 1;">{% translate 'Set Consumer Properties' %}</span>
                   <span style="flex-shrink: 0;  margin-right: 20px;">
-                    <strong>Use Custom Demand Time Series:</strong>
+                    <strong>{% translate 'Use Custom Demand Time Series:' %}</strong>
                   </span>
                   <label class="switch" style="margin-right: 20px;">
                     <input id="customDemand"
@@ -53,7 +53,7 @@
                     <!-- Plot Column -->
                     <div class="col-md-8">
                       <p>
-                        <a>Electricity Demand Profile Illustration: First Monday of Simulation Period</a>
+                        <a>{% translate 'Electricity Demand Profile Illustration: First Monday of Simulation Period' %}</a>
                       </p>
                       <div id="radioButtons" style="margin-bottom: 10px;">
                         <input type="radio"
@@ -61,12 +61,12 @@
                                name="plotOption"
                                value="totalDemand"
                                checked />
-                        <label for="optionTotalDemand" style="margin-right: 10px">Show Total Demand</label>
+                        <label for="optionTotalDemand" style="margin-right: 10px">{% translate 'Show Total Demand' %}</label>
                         <input type="radio"
                                id="optionSingleHousehold"
                                name="plotOption"
                                value="singleHousehold" />
-                        <label for="optionSingleHousehold">Show Single Household Profile</label>
+                        <label for="optionSingleHousehold">{% translate 'Show Single Household Profile' %}</label>
                       </div>
                       <div class="chart__plot" style="min-height: 200px;">
                         <div id="demand_plot"></div>
@@ -75,10 +75,10 @@
                     <!-- Texts and Input Labels Column -->
                     <div class="col-md-4">
                       <p>
-                        <a>Set Own Custom Shares of Households Allocated per Consumption Category</a>
+                        <a>{% translate 'Set Own Custom Shares of Households Allocated per Consumption Category' %}</a>
                       </p>
                       <p>
-                        <em>The default values correspond to the national average of rural areas</em>
+                        <em>{% translate 'The default values correspond to the national average of rural areas' %}</em>
                       </p>
                       <!-- Input Fields Container -->
                       <div class="shares-container">
@@ -87,7 +87,7 @@
                         <label class="form-label">{{ field.label | safe }}</label>
                         <div class="input-group">
                           {{ field|add_class:"form-control" }}
-                          <span class="input-group-text">%</span>
+                          <span class="input-group-text">{% translate '%' %}</span>
                         </div>
                         {% endif %}
                         {% endfor %}
@@ -105,27 +105,32 @@
                                 align-items: center;
                                 justify-content: center;
                                 grid-column: span 2"
-                         href="javascript:void(0);">Reset</a>
+                         href="javascript:void(0);">{% translate 'Reset' %}</a>
                     </div>
                   </div>
                   <div class="row">
                     <p>
-                      <a>Demand Estimation</a>
+                      <a>{% translate 'Demand Estimation' %}</a>
                     </p>
                     <p>
+                      {% blocktranslate trimmed %}
                       Several typical standardized household demand profiles have been developed from
                       roughly 3600 energy appliance ownership and usage surveys that were conducted
                       across Nigeria in 2020 in 3 prioritized geopolitical zones. Survey details can
-                      be found in the publication here: <a href="https://www.nature.com/articles/s41597-023-02185-0">PeopleSuN
+                      be found in the publication here:
+                      {% endblocktranslate %}
+                      <a href="https://www.nature.com/articles/s41597-023-02185-0">PeopleSuN
                       (2023) Electricity supply quality and use among rural and peri-urban
                       households and small firms in Nigeria</a>
                     </p>
                     <p>
+                      {% blocktranslate trimmed %}
                       The open-source Remote Area Multi-Energy Profiles simulation software (RAMP) has
                       been used to develop 5 typical non-urban Nigerian household energy consumption
                       categories (from Very Low to Very High). The pre-created default options below
                       represent weighted combinations of each of these consumption categories that
                       match the observed data in each of the geographic zones.
+                      {% endblocktranslate %}
                     </p>
                   </div>
                 </div>
@@ -143,7 +148,7 @@
                             margin-right: 10px;
                             color: #fff"
                      href="javascript:void(0);"
-                     onclick="javascript:export_demand(document.getElementById('fileTypeDropdown').value);">Export Demand</a>
+                     onclick="javascript:export_demand(document.getElementById('fileTypeDropdown').value);">{% translate 'Export Demand' %}</a>
                   <select id="fileTypeDropdown"
                           class="form-select"
                           style="max-width: 150px;
@@ -151,12 +156,12 @@
                                  height: 32px;
                                  line-height: 20px;
                                  padding: 0 24px 0 8px">
-                    <option value="csv">File type: CSV</option>
-                    <option value="xlsx">File type: XLSX</option>
+                    <option value="csv">{% translate 'File type: CSV' %}</option>
+                    <option value="xlsx">{% translate 'File type: XLSX' %}</option>
                   </select>
                 </span>
                   <span style="display: flex; align-items: center; ; margin-right: 10px">
-                  <a style="margin-right: 10px;">Activate Custom Calibration</a>
+                  <a style="margin-right: 10px;">{% translate 'Activate Custom Calibration' %}</a>
                   <label class="switch">
                     <input type="checkbox"
                            id="toggleswitch"
@@ -176,9 +181,10 @@
                   <p>
                     <a>
                       <br>
-                      Set Custom Total Profile Calibration Values (Optional)</a>
+                      {% translate 'Set Custom Total Profile Calibration Values (Optional)' %}</a>
                   </p>
                   <p>
+                    {% blocktranslate trimmed %}
                     These options will calibrate the total community demand profile to set value below <b>(including
                     enterprises and any other non-household demands chosen previously)</b>.
                     <br>
@@ -189,6 +195,7 @@
                     This is compatible with choosing custom
                     percentage shares of consumption categories, but the total will be re-scaled
                     accordingly.
+                    {% endblocktranslate %}
                   </p>
                   <div class="btn-group-vertical">
                     <div class="btn btn-custom active d-inline-flex align-items-center justify-content-start">
@@ -232,14 +239,14 @@
                               align-items: center;
                               justify-content: center;
                               margin-right: 10px"
-                       href="javascript:void(0);">Import Demand</a>
+                       href="javascript:void(0);">{% translate 'Import Demand' %}</a>
                     <span class="icon icon-question"
                           data-bs-toggle="tooltip"
-                          title="The first row of the CSV or Excel file should contain the column headers, with subsequent rows containing the respective values. The file must include a 'demand' column. Please provide hourly data with at least as many timestamps as your selected simulation days multiplied by 24 (e.g., 365 days require a minimum of 8,760 timestamps). Any additional timestamps beyond this requirement will be truncated. If you encounter issues uploading your file, try deselecting Use Custom Demand. This will display a button at the bottom of the section, allowing you to download the estimated demand time series. Use the downloaded file as a template to understand the required data structure."
+                          title="{% translate 'The first row of the CSV or Excel file should contain the column headers, with subsequent rows containing the respective values. The file must include a \'demand\' column. Please provide hourly data with at least as many timestamps as your selected simulation days multiplied by 24 (e.g., 365 days require a minimum of 8,760 timestamps). Any additional timestamps beyond this requirement will be truncated. If you encounter issues uploading your file, try deselecting Use Custom Demand. This will display a button at the bottom of the section, allowing you to download the estimated demand time series. Use the downloaded file as a template to understand the required data structure.' %}"
                           style="margin-right: 10px"></span>
                   </span>
-                  <a style="margin-left: 20px; margin-right: 20px;">Status:</a>
-                  <a id="uploadStatus" style="margin-right: 10px;">No File Uploaded</a>
+                  <a style="margin-left: 20px; margin-right: 20px;">{% translate 'Status:' %}</a>
+                  <a id="uploadStatus" style="margin-right: 10px;">{% translate 'No File Uploaded' %}</a>
                 </p>
               </div>
             </div>
