Fix reset button on household shares

--- a/offgridplanner/templates/pages/demand_estimation.html
+++ b/offgridplanner/templates/pages/demand_estimation.html
@@ -270,6 +270,7 @@
 <script>
   const proj_id = '{{ proj_id }}';
   const csrfToken = '{{ csrf_token }}';
+  const previousValues = {{ household_initial_shares | safe }};
   const exportDemandUrl = `{% url 'optimization:export_demand' proj_id %}`;
   const importDemandUrl = `{% url 'optimization:import_demand' proj_id %}`;
 </script>
