Enable excel download

--- a/offgridplanner/templates/pages/simulation_results.html
+++ b/offgridplanner/templates/pages/simulation_results.html
@@ -567,6 +567,7 @@
       const loadPlotDataUrl = `{% url 'optimization:load_plot_data' proj_id %}`;
       const loadDemandPlotUrl = `{% url 'optimization:load_demand_plot_data' proj_id %}`;
       const downloadPDFReportUrl = `{% url 'projects:download_pdf_report' proj_id %}`;
+      const downloadExcelResultsUrl = `{% url 'projects:download_excel_results' proj_id %}`;
     </script>
   <script src="{% static 'js/integrate_map.js' %}"></script>
   <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
