fixed url connection to model description page

--- a/offgridplanner/templates/base.html
+++ b/offgridplanner/templates/base.html
@@ -83,7 +83,7 @@
                 <a href="{% url 'about' %}">{% translate "Contact" %}</a>
               </li>
               <li>
-                <a href="{% url 'license' %}">{% translate "License" %}</a>
+                <a href="{% url 'model_description' %}">{% translate "Model Description" %}</a>
               </li>
               <li>
                 <a href="{% url 'imprint' %}">{% translate "Imprint" %}</a>
