--- a/offgridplanner/templates/navbar.html
+++ b/offgridplanner/templates/navbar.html
@@ -79,7 +79,7 @@
               </li>
               <!-- account.html -->
               <li>
-                <a class="dropdown-item" href="{% url 'license' %}">{% translate "License" %}</a>
+                <a class="dropdown-item" href="{% url 'model_description' %}">{% translate "Model Description" %}</a>
               </li>
               <li>
                 <a class="dropdown-item" href="{% url 'about' %}">{% translate "Contact" %}</a>
