--- a/offgridplanner/templates/navbar.html
+++ b/offgridplanner/templates/navbar.html
@@ -75,7 +75,7 @@
                 <a class="dropdown-item" href="{% url 'projects:home' %}">{% translate "My Projects" %}</a>
               </li>
               <li>
-                <a class="dropdown-item" href="{% url 'users:detail' user.id %}">{% translate "Account" %}</a>
+                <a class="dropdown-item" href="{% url 'training_tasks' %}">{% translate "Training Tasks" %}</a>
               </li>
               <!-- account.html -->
               <li>
